@@ -1,0 +1,2 @@
+Add missing debian/rules targets build-indep, build-arch.
+Fixed-Lintian-Tags: debian-rules-missing-recommended-target
