@@ -1,0 +1,11 @@
+#!/usr/bin/make -f
+
+build: blah
+	$(MAKE) install DESTDIR=debian/..
+
+clean:
+	dh_prep -k
+
+build-indep:
+
+build-arch: build
