@@ -1,0 +1,9 @@
+#!/usr/bin/make -f
+
+build: blah
+	$(MAKE) install DESTDIR=debian/..
+
+clean:
+	dh_prep -k
+
+.PHONY: clean
