@@ -14,6 +14,7 @@ lintian-brush (0.46) UNRELEASED; urgency=medium
     a source of toil.
   * Don't keep debian/upstream/metadata files with just the Archive
     field set.
+  * Add fixer for debian-rules-missing-recommended-target.
 
  -- Jelmer Vernooĳ <jelmer@debian.org>  Sun, 08 Dec 2019 15:33:27 +0000
 
